--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,5 +34,12 @@ dependencies {
     //butternife
     implementation 'com.jakewharton:butterknife:10.2.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.1'
+
+    // material design
     implementation 'com.google.android.material:material:1.0.0'
+
+    //material calenderview
+    implementation 'com.github.prolificinteractive:material-calendarview:2.0.1'
+
+
 }
