--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
         <activity android:name=".view.ui.activity.DateActivity"
+            android:theme="@style/FullscreenTheme"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.FullScreenWindow.Full.ActionDate"
             android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,13 +24,13 @@
         </activity>
         <activity android:name=".view.ui.activity.DailyExpensesActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.FullScreenWindow.Full.Action"
+            android:theme="@style/FullscreenTheme"
             android:windowSoftInputMode="adjustResize">
 
         </activity>
         <activity android:name=".view.ui.activity.NewExpensesActivity"
             android:screenOrientation="portrait"
-            android:label="add new expenses"
+            android:label="New Expenses"
             android:windowSoftInputMode="adjustResize">
 
         </activity>
