--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:roundIcon="@drawable/logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
-        <activity android:name=".view.ui.activity.DateActivity"
+        <activity android:name=".view.ui.activity.Monthly_DateSelection_Activity"
             android:theme="@style/FullscreenTheme"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize">
