--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,12 @@
             android:windowSoftInputMode="adjustResize">
 
         </activity>
+        <activity android:name=".view.ui.activity.EditExpensesActivity"
+            android:screenOrientation="portrait"
+            android:label="Edit Expenses"
+            android:windowSoftInputMode="adjustResize">
+
+        </activity>
     </application>
 
 </manifest>
