added permissions, image dummy placeholder to list
current bug: easy image throwing error

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,5 +60,8 @@ dependencies {
     //Circular ImageView
     implementation 'de.hdodenhof:circleimageview:2.2.0'
 
+    //easyImage
+    implementation 'com.github.jkwiecien:EasyImage:3.0.3'
+
 
 }
