--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,9 @@ dependencies {
     // material design
     implementation 'com.google.android.material:material:1.0.0'
 
+    // drawer layout
+    implementation "androidx.drawerlayout:drawerlayout:1.1.0-alpha03"
+
     // material calenderview
     implementation 'com.github.prolificinteractive:material-calendarview:2.0.1'
     implementation "org.threeten:threetenbp:1.3.8:no-tzdb"
