--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,12 +49,18 @@ dependencies {
     implementation 'com.github.prolificinteractive:material-calendarview:2.0.1'
     implementation "org.threeten:threetenbp:1.3.8:no-tzdb"
 
+    //firebase report
+    implementation 'com.google.firebase:firebase-core:17.2.2'
+
     // firebase crash analytics
     implementation 'com.google.firebase:firebase-analytics:17.2.2'
     implementation 'com.google.firebase:firebase-crashlytics:17.0.0-beta01'
 
     // Sign in with Gmail
     implementation 'com.google.android.gms:play-services-auth:16.0.1'
+
+    //facebook integration
+    implementation 'com.facebook.android:facebook-android-sdk:[5,6)'
 
     // glide
     implementation 'com.github.bumptech.glide:glide:4.11.0'
@@ -65,6 +71,7 @@ dependencies {
 
     //easyImage
     implementation 'com.github.jkwiecien:EasyImage:1.3.1'
+    implementation 'com.google.firebase:firebase-messaging:20.1.0'
 
 
 }
