--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
-    // butternife
+    // butterKnife
     implementation 'com.jakewharton:butterknife:10.2.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.1'
 
@@ -60,7 +60,8 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:16.0.1'
 
     //facebook integration
-    implementation 'com.facebook.android:facebook-android-sdk:[5,6)'
+   // implementation 'com.facebook.android:facebook-android-sdk:[5,6)'
+    implementation 'com.facebook.android:facebook-login:4.37.0'
 
     // glide
     implementation 'com.github.bumptech.glide:glide:4.11.0'
