--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,7 +54,7 @@ dependencies {
 
     // firebase crash analytics
     implementation 'com.google.firebase:firebase-analytics:17.2.2'
-    implementation 'com.google.firebase:firebase-crashlytics:17.0.0-beta01'
+    implementation 'com.google.firebase:firebase-crashlytics:17.2.2'
 
     // Sign in with Gmail
     implementation 'com.google.android.gms:play-services-auth:16.0.1'
@@ -73,6 +73,9 @@ dependencies {
     //easyImage
     implementation 'com.github.jkwiecien:EasyImage:1.3.1'
     implementation 'com.google.firebase:firebase-messaging:20.1.0'
+
+    //twitter
+    implementation  'com.twitter.sdk.android:twitter:3.1.1'
 
 
 }
